--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.0.4",
     "nookies": "^2.5.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
