--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "hamburger-react": "^2.5.0",
     "next": "14.0.4",
     "nookies": "^2.5.2",
     "react": "^18",
