--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
-  "name": "front-neo-labic",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "hamburger-react": "^2.5.0",
-    "next": "14.0.4",
-    "nookies": "^2.5.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "yup": "^1.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "typescript": "^5"
-  }
+	"name": "front-neo-labic",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"hamburger-react": "^2.5.0",
+		"markdown-yaml-metadata-parser": "^3.0.0",
+		"moment": "^2.30.1",
+		"next": "14.0.4",
+		"nookies": "^2.5.2",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^4.12.0",
+		"react-markdown": "^9.0.1",
+		"react-syntax-highlighter": "^15.5.0",
+		"rehype-format": "^5.0.0",
+		"rehype-highlight": "^7.0.0",
+		"rehype-slug": "^6.0.0",
+		"remark-gemoji": "^8.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-rehype": "^11.0.0",
+		"remark-supersub": "^1.0.0",
+		"remark-toc": "^9.0.0",
+		"vfile-matter": "^5.0.0",
+		"yup": "^1.3.3"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/react-syntax-highlighter": "^15.5.11",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.4",
+		"typescript": "^5"
+	}
 }
